...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="BvT-mB-M8E">
                                <rect key="frame" x="116" y="277" width="142.5" height="113"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNr-fD-pp4">
                                        <rect key="frame" x="0.0" y="0.0" width="142.5" height="33"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <state key="normal" title="Edit Secret"/>
                                        <connections>
                                            <action selector="editSecret:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jDT-yh-Iat"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="maa-EK-tRA">
                                        <rect key="frame" x="0.0" y="41" width="142.5" height="33"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <state key="normal" title="Purge Secret"/>
                                        <connections>
                                            <action selector="purgeSecret:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mVA-jF-jg8"/>
                                        </connections>
                                    </button>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="c8j-mv-2DL">
                                        <rect key="frame" x="0.0" y="82" width="142.5" height="31"/>
...
